tests/enum_into/compile_fail/container/invalid_attribute_syntax.stderr
error: expected `,`
 --> tests/enum_into/compile_fail/container/invalid_attribute_syntax.rs:4:20
  |
4 | #[enum_into(Target1; Target2)] // semi colon instead of comma
  |                    ^
